plugins {
    id 'java-library'
    id 'maven-publish'
}

dependencies {
    implementation project(':unsafe')
    compileOnly "org.jetbrains:annotations:+"
}
compileJava {
    options.compilerArgs << '--enable-preview' << '-Xlint:-preview'
}
publishing {
    repositories {
        maven {
            name = "GithubPackages"
            url = uri("https://maven.pkg.github.com/CelDaemon/celestia")
            credentials {
                username = System.getenv("USERNAME")
                password = System.getenv("TOKEN")
            }
        }
    }
    publications {
        main(MavenPublication) {
            groupId = 'net.voidgroup'
            artifactId = 'celestia'
            version = '1.0-SNAPSHOT'

            from components.java
        }
    }
}
java {
    withSourcesJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}